# chimera

./: .clang-format  .gitignore  GenerateProjectFiles.bat  GenerateProjectFiles.sh  LICENSE  rm.sh
engine/: CMakeLists.txt  Config.cmake.in  README.md
engine/include/: Chimera.h  README.md
engine/internal/: CmUtil.h  README.md
engine/internal/cm_util/: PlatformDetection.h  Sal.h
engine/source/: README.md
engine/source/core/: Application.cpp  Application.h  Base.h  Logger.cpp  Logger.h  Pch.h  PlatformDetection.h
scop/: CMakeLists.txt  setup.bat  setup.sh
scop/source/: Scop.cpp
